tests/ucc/type/bad/conditional-expr-1.c
struct a
{
    int b;
};

int main(void)
{
    struct a b;

    return b ? 0 : 1;
}
